--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ script:
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
 
