--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 script:
   - docker run -e CI=true woojina/docker-react npm run test
 
- deploy:
+deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "frontend"
@@ -18,5 +18,5 @@ script:
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
 
